--- a/quarto/precalc/calculator.qmd
+++ b/quarto/precalc/calculator.qmd
@@ -787,7 +787,7 @@ radioq(choices, answ)
 ###### Question
 
 
-Wich of the following is a valid `Julia` expression for
+Which of the following is a valid `Julia` expression for
 
 
 $$
