--- a/quarto/derivatives/newtons_method.qmd
+++ b/quarto/derivatives/newtons_method.qmd
@@ -368,6 +368,7 @@ For the function $f(x) = \cos(x) - x$, we see that SymPy can not solve symbolica
 
 
 ```{julia}
+#| error: true
 @syms x::real
 solve(cos(x) - x, x)
 ```
