--- a/quarto/limits/limits.qmd
+++ b/quarto/limits/limits.qmd
@@ -556,11 +556,11 @@ To look at the limit in this example, we have (recycling the values in `hs`):
 #| hold: true
 c = 1
 f(x) = x^x
-ys = [(f(c + h) - f(c)) / h for  h in hs]
-[hs ys]
+sec_line_slope(h) = (f(c+h) - f(c)) / h
+lim(sec_line_slope, 0)
 ```
 
-The limit looks like $L=1$. A similar check on the left will confirm this numerically.
+The limit looks like $L=1$.
 
 
 ### Issues with the numeric approach
