--- a/quarto/limits/limits_extensions.qmd
+++ b/quarto/limits/limits_extensions.qmd
@@ -861,23 +861,23 @@ numericq(-1)
 ###### Question
 
 
-As mentioned, for limits that depend on specific values of parameters `SymPy` may have issues. As an example, `SymPy` has an issue with this limit, whose answer  depends on the value of $k$"
+As mentioned, for limits that depend on specific values of parameters `SymPy` may have issues. As an example, `SymPy` has an issue with the following limit, whose answer  depends on the value of $k$"
 
 
 $$
 \lim_{x \rightarrow 0+} \frac{\sin(\sin(x^2))}{x^k}.
 $$
 
-Note, regardless of $k$ you find:
 
+In particular, the following with a symbolic `k` will fail:
 
 ```{julia}
-#| hold: true
+#| eval: false
 @syms x::real k::integer
 limit(sin(sin(x^2))/x^k, x=>0)
 ```
 
-For which value(s) of $k$ in $1,2,3$ is this actually the correct answer? (Do the above $3$ times using a specific value of `k`, not a numeric one.
+For which value(s) of $k$ in $1,2,3$ is the limit $0$? (Do the above $3$ times using a specific value of `k`, not a numeric one.
 
 
 ```{julia}
