Fix punctuation in index.qmd
Adds a missing `"` character and removes and extraneous `.`

--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -11,7 +11,7 @@ This is a set of notes for learning
 programming language with an easy to learn syntax that is well suited
 for this task.
 
-Read "[Getting started with Julia](./misc/getting_started_with_julia.html)" to learn how to install and customize  `Julia` for following along with these notes. Read "[Julia interfaces](./misc/julia_interfaces.html) to review different ways to interact with a `Julia` installation.
+Read "[Getting started with Julia](./misc/getting_started_with_julia.html)" to learn how to install and customize  `Julia` for following along with these notes. Read "[Julia interfaces](./misc/julia_interfaces.html)" to review different ways to interact with a `Julia` installation.
 
 Since the mid 90s there has been a push to teach calculus using many
 different points of view. The
@@ -59,7 +59,7 @@ in a spirit similar to a section of a book. Just like a book, there
 are try-it-yourself questions at the end of each page. All have a
 limited number of self-graded answers. These notes borrow ideas from
 many sources, for example @Strang, @Knill, @Schey, @Thomas,
-@RogawskiAdams, several Wikipedia pages, and other sources..
+@RogawskiAdams, several Wikipedia pages, and other sources.
 
 These notes are accompanied by a `Julia` package `CalculusWithJulia`
 that provides some simple functions to streamline some common tasks
